add fourier series, DFT

--- a/cg/2024-10-17.md
+++ b/cg/2024-10-17.md
@@ -7,6 +7,46 @@
 6. Fourier Series
 7. Spherical Harmonics
 
+#### Fourier Series
+
+1. 푸리에 급수 관련 수학
+	 모든 주기적 신호는 서로 다른 크기의 amplitude, frequency를 갖는 정현파(삼각함수)들의 합으로 만들 수 있다. 푸리에 급수에서는 사인 함수와 코사 사인 함수가 basis funciton이다. 주어진 함수 f(t)가 각 basis 에 얼만큼 기여하는지 나타내는 것이 푸리에 계수이다.
+	 $$
+ f(t) = a_0 + a_1\cos{\omega t} + a_2\cos{2\omega t} + ... +a_n\cos{n\omega t} + b_1\sin{\omega t} + ... b_n\sin{n\omega t}
+	 $$
+	 첫 중심인 $a_0$를 제외하고 보았을 때, 우선 단순한 파동 모두 기본 주파수 $\omega$의 정수 배로 이루어져 있다. 또한 계수 $a_1$부터 $b_n$까지 모여서 amplitude spectrum을 생성한다. 계수들은 이러한 파동들이 얼마만큼 포함되어 있는가? 라고도 볼 수 있다. 두 직교한 벡터를 내적하면 0이 된다는 사실을 알고 있을 때, 삼각함수를 내적했을 때 결과들은 다음과 같다. $\sin{x}$와 $\cos{x}$는 주기 내에서 직교하기 때문이다. 일반화해서 $\sin{nx}$와 $\cos{nx}$는 주기 내 내적이 0이다.
+	 $$
+		 \int^{T}_{0}\sin{n\omega x}\cos{m\omega x} dx = 0 \quad \int^{T}_{0}\cos{n\omega x}\cos{m\omega x} dx = 0 \quad \int^{T}_{0}\sin{n\omega x}\sin{m\omega x} dx = 0 (n\neq m)
+		
+	 $$
+	 $$
+	  \newline \int^{T}_{0}\cos{n\omega x}\cos{m\omega x} dx \neq 0 \quad \int^{T}_{0}\sin{n\omega x}\sin{m\omega x} dx \neq 0 (n = m) \\
+	  $$
+	  자기 자신을 내적하는 경우를 제외하고는 0이 나오기 때문에 이를 이용하여 $a_n$과 $b_n$을 구할 수 있다. $a_0$의 경우, f(t)의 주기 T로 적분하면 삼각항을 모두 제거할 수 있다.
+	$$
+	f(t) = a_0 + \sum_{n=1}^{\infty}{(a_n\cos{n\omega t} + b_n\sin{n\omega t})},\quad  a_0 = {1 \over T}\int_{0}^{T}{f(t)dt}
+	$$
+	여기서 f(t)에  $\cos{n\omega t}$를 곱하고 주기로 적분하면
+	$$
+	\int_0^T{f(t)\cdot \cos{n\omega t}} = \int_0^T{\cos{n\omega t} \cdot a_0 dt} + \sum_{n=1}^{\infty}{(a_n\int^{T}_{0}\cos{n\omega t}\cdot\cos{n\omega t} dt} + b_n\int^{T}_{0}\cos{n\omega t}\cdot\sin{n\omega t}dt)
+	$$
+	에서 위의 직교성 때문에 다음과 같이 바꿀 수 있다.
+	$$
+		\int_0^T{f(t)\cdot \cos{n\omega t}} = \sum_{n=1}^{\infty}{(a_n\int^{T}_{0}\cos{n\omega t}\cdot\cos{n\omega t} dt}) =
+		a_n\int_0^T{1\over2 }dt \int_0^T{f(t)\cos{n\omega t}dt} = a_n \cdot {T\over2}
+	$$
+$$
+\therefore a_n = {2\over T}\int_0^T{f(t)\cos{n\omega t}dt},\quad b_n = {2\over T}\int_0^T{f(t)\sin{n\omega t}dt}
+$$
+즉 복잡한 푸리에급수 f(t) 에 대하여 각 n차 항들의 계수를 알아낼 수 있다. 여기서 오일러 공식을 푸리에 급수에 대입한다면 다음과 같이 정리할 수 있다.
+$$
+f(t) = {\sum_{n=-\infty}^{\infty}}({1\over T}{\int_0^T{f(t)e^{in\omega t}dt}})e^{-in\omega t})
+$$
+푸리에 급수 개념을 이용하여 지수, 로그, 삼각함수들로 이루어진 함수들을 무한급수로 나타낼 수 있다. 다시 간단한 푸리에 사인 급수 $f(t) = \sum_{n=1}^{\infty}{F_n\sin{(n\omega t)}}$ 에서 우리가 모르는 주기 함수 f(t)를 쓰는 것보다 시간에 따른 계수를 결정할 수 있는 무한급수가 사용하기 더 수월하다. 푸리에 사인 급수와 코사인 급수가 합쳐진 우함수와 기함수 특성을 모두 합친 것을 복소 푸리에 급수라고 한다. 우, 기와 상관없이 모든 주기 함수에 대한 일반항이다.
+
+2. 복소 평면 표현
+	다시 정리해서 삼각함수들의 무한 급수를 푸리에 급수로 나타낼 수 있다. 각 계수 $a_n$은 amplitude로 어느 만큼의 파동이 섞여 있는 지 알 수 있고 파동 자체는 각자의 frequency와 pahse를 가지고 있다. 오일러 공식을 통해 사인파를 $e^{in\omega t}$꼴의 복소지수로 나타낼 수 있기 때문에 복소 평면으로 쉽게 amplitude와 phase를 표현할 수 있다.
+	
 ### Fourier Transform
 
 1. Fourier Transform summary
@@ -14,33 +54,38 @@
 	2. 모든 파동들은 주기 함수의 합(series)으로 나타낼 수 있고(분해) 역변환이 가능하다
 	3. fourier transform을 통해 계수(amplitude)와 파장(frequency)을 구할 수 있다
 	   
-	 전파나 음성 신호 같은 t, time domain -> frequency domain을 뽑아낼 수 있고, image의
-	경우에는 공간축으로 정의될 수도 있다(spatial domain -> frequency domain)
+	 전파나 음성 신호 같은 t, time domain -> frequency domain을 뽑아낼 수 있고, image의 경우에는 공간축으로 정의될 수도 있다(spatial domain -> frequency domain)
 	
-1. Fourier Transform mathematical understanding
+2.  Fourier Transform mathematical understanding
 	- 복소 평면을 쓰는 이유
 	위상(phase)을 표현할 때 적합한 표현이기 때문, amplitude + frequency에 대한 위치를 좌표로 찍을 수 있다. 기존의 수직선의 y축에 i 축을 넣으면 1에 i를 곱했을 때 y축 위 1i로 90도 위상 변화 표현이 가능하다. 길이가 1인 $\theta$ 좌표는 다음과 같이 표현할 수 있다. 이를 통해 복소지수함수를 삼각함수의 합 꼴로 변환할 수 있다(Euler's formula). 
 	$$
 	(\cos{\theta},~i\sin{\theta}),\quad 	e^{i\pi}~=~\cos{\theta} +i\sin{\theta}, \quad e^{i2{\pi}ux} = \cos{2{\pi}ux} + i\sin{2{\pi}ux}
 	$$
-	우리가 분해하고 싶은 주기함수의 계수, amplitude, F(u)는 다음과 같이 나타낼 수 있다. 푸리에 변환은 $(1, \cos{\theta}, \sin{\theta})$로 위상이 다른 basis로 이루어져 있다. 푸리에 변환은 이러한 basis들의 일차 결합으로 이루어진 series라고 볼 수 있다. 만약 basis 들이 서로 수직이람녀 임의의 벡터와 basis의 dot product로 basis의 계수를 얻을 수 있다.
+	우리가 분해하고 싶은 주기함수의 계수, amplitude, F(u)는 다음과 같이 나타낼 수 있다. 푸리에 변환은 $(1, \cos{\theta}, \sin{\theta})$로 위상이 다른 basis로 이루어져 있다. 푸리에 변환은 이러한 basis들의 일차 결합으로 이루어진 series라고 볼 수 있다. 만약 basis 들이 서로 수직이라면 임의의 벡터와 basis의 dot product로 basis의 계수를 얻을 수 있다.
 	$$
-	F(u) = \int_{-\infty}^{\infty}{f(x)e^{-i2\pi ux}dx} 
+	F(u) = \int_{-\infty}^{\infty}{f(x)e^{-i2\pi ux}dx} , (\omega = 2\pi u)
 	$$
 	왜 분해하고 싶은 주기함수 성분을 오히려 적분을 하는가???
+	
 	특정 사인파가 신호에 얼마나 포함되었는가를 확인하기 위해 각 지점에서 신호의 사인파를 곱한 면적을 구한다. 대부분에 경우에서 연속된 샘플과 구간의 경우 면적의 합은 항상 0이다. 하지만 파동의 특정 frequency와 주기 함수의 frequency(u)가 일치하는 경우, 면적의 합이 0이 아니다. 이런 사인파의 모든 frequency에 대해 면적을 구해여 frequency graph를 얻을 수 있다. 특정 frequency(u)가 어느 amplitude 만큼 포함되어 있는지. 이때 사인파와 코사인파를 모두 적용해야하는데 오일러 식을 통해 신호의 위상 표현식으로 구한다. 반대로 원본 f(x) 역시 F(u)에 넣는 u 샘플들의 적분으로 구할 수 있다. 위의 식에서 u가 0, ±1, ±2 ... 라면 이런 신호는 basis가 서로 직교함을 알 수 있다.
 	$$
-		f(x) = \int_{-\infty}^{\infty}{F(u)e^{i2\pi ux}du} 
+		F(u) = \int_{-\infty}^{\infty}{f(t)e^{-i2\pi ut}dt}, \quad \quad f(t) = \int_{-\infty}^{\infty}{F(u)e^{i2\pi ut}du} 
 	$$
-	 그렇다면 f(x)에 비교할 만한 적당한 u = 0, ±1, ±2... 를 어떻게 찾아낼까??
+	왠지 생김새가 주어진 함수에서 다양한 frequency를 갖는 정현파들의 correlation 시킨 것 같다.
+	 
+3. 이미지에서 Fourier transform
+	위 수식에서 f(t)를 시간 도메인 함수라고 부르고 우리가 변환해야 할 대상 신호를 나타내는 함수이다. 이미지에서는 f(x. y) 꼴의 2차원 함수이고 공간 도메인 함수라고 부른다.
 ### Discrete Fourier Transform(DFT)
 
 1. discrete fourier transform
-	 대부분의 신호 데이터(이미지나 음성, 비디오 등)들은 디지털 신호이기 때문에 연속적이지 않고 이산 신호, 적당한 finite한 구간에서 정의되는 신호이다. N개의 데이터를 가지는 이산 신호 함수 f(x)에 대해 다음과 같이 분해할 수 있다.
+	 대부분의 신호 데이터(이미지나 음성, 비디오 등)들은 디지털 신호이기 때문에 연속적이지 않고이산 신호, 적당한 finite한 구간에서 정의되는 신호이다. x = 0, 1, ... N-1 데이터를 가지는 이산 신호 함수 f(x)에 대해 다음과 같이 분해할 수 있다.
 	 $$
 	 F(u) = \sum_{x=0}^{N-1}f(x)e^{-i2\pi ux/N}
 	 $$
-	 샘플들의 성격에 따라 찾을 수 있는 u구분이 가능한데, 샘플 간의 간격이 짧을 수록 유사한 주파수를 구분할 수 없고 샘플 간격이 넓다면 그 사이의 고주파수를 찾을 수 없게 된다. 신호의 샘플 수만큼 F(u)를 찾을 수 있다. 최소 N 번의 DFT 함수가 호출 된다. 이미지는 x, y축에 해당하는 픽셀 밝기 값을 신호로 생각하면 됨. W x H 이미지에서 푸리에 변환하면 F(u, v)는 어떤 실수부와 허수부로 나누어지는데 크기를 spectrum, 각을 phase angle으로 정의된다. 이미지에서 밝기는 각 주파수 성분의 크기를 나타내고 색상은 phase를 나타낸다.
+	 샘플들의 성격에 따라 찾을 수 있는 u구분이 가능한데, 샘플 간의 간격이 짧을 수록 유사한 주파수를 구분할 수 없고 샘플 간격이 넓다면 그 사이의 고주파수를 찾을 수 없게 된다. 신호의 샘플 수만큼 F(u)를 찾을 수 있다. 최소 N 번의 DFT 함수가 호출 된다.
+2. fourier spectrum
+	 이미지는 x, y축에 해당하는 픽셀 밝기 값을 신호로 생각하면 된다. W x H 이미지에서 푸리에 변환하면 F(u, v)는 어떤 실수부와 허수부로 나누어지는데 크기를 spectrum, 각을 phase angle으로 정의된다. 이미지에서 밝기는 각 주파수 성분의 크기를 나타내고 색상은 phase를 나타낸다. 이미지를 신호로 해석하는 문제는 x, y축을 시간 축처럼 놓고 좌표에 따른 이미지 픽셀 밝기 변화를 신호 값으로 간주한다. 
 	 $$
 	F(u, v) = \sum_{x=0}^{W-1}\sum_{y=0}^{H-1}f(x, y)e^{-i2\pi (ux/W + vy/H)}
 	 $$
@@ -49,8 +94,29 @@
 \phi(u,v) =\tan^{-1}({I(u,v)\over{R(u,v)}}) \quad
 F(u,v) = |F(u,v)|e^{i\phi(u, v)}
 	$$
-	F(0, 0)은 영상의 DC 성분, 입력 영상의 모든 픽셀 값과 같다. 이를 기준으로 나머지를 255 정규화 하면 가운데만 흰색 나머지는 거의 0과 가까운 고주파수 성분이 된다.(보통 log로 시각화) 일부 고주파수 성분을 버려도 역푸리에 변환을 했을 때 원본에 가까갑게 복원이 가능하다. 이미지 신호에서 특징적인 부분을 추출할 수 있다는 뜻.
-	![[그림1.png]]
-	푸리에 변환은 sin cos 함수꼴이기 때문에 실수의 u, v에 대해 항상 상하좌우 대칭을 이루고 있다(u, v = 0, ±1, ±2 등, 자연수 아니어도 됨!) 
+	Fourier spectrum은 해당 frequency가 이미지에 얼마나 비중이 있는지를 나타낸다. 가운데 이미지를 중앙으로 shift 했을 때 F(0, 0)은 영상의 DC 성분, 입력 영상의 모든 픽셀 값과 같다. 이를 기준으로 나머지를 255 정규화 하면 가운데만 흰색 나머지는 거의 0과 가까운 고주파수 성분이 된다.(보통 log로 시각화) 일부 고주파수 성분을 버려도 역푸리에 변환을 했을 때 원본에 가깝게 복원이 가능하다. 이미지 신호에서 특징적인 부분을 추출할 수 있다는 뜻.
+	![[그림1.png|200]] ![[Pasted image 20241015223041.png|450]]
 
-fft는 정형파의 대칭성 이용 dp같이
+	푸리에 변환은 sin cos 함수꼴이기 때문에 실수의 u, v에 대해 항상 상하좌우 대칭을 이루고 있다(u, v = 0, ±1, ±2 등, 자연수 아니어도 됨!). 해당 fourier spectrum이 주파수의 강도를 나타내는데 이걸 이미지 에서 어떻게 해석을 할 수 있을까? 특정 이미지(205 by 205)의 fourier spectrum image를 볼 때는 위의 사진과 비슷하게 나타난다. 해당 이미지에 x축으로 20 pixel, y축으로 10픽셀인 sin 함수를 강제로 추가한다면 푸리에 스펙트럼에는 F(10.25, 20.5)에 강한 저주파 점이 찍히게 된다. 이는 W/u = 205/10.25 = 20, H/v = 205/20.5 = 10 pixel의 주기 성분이 입력 이미지에 찍히게 된다(실제 u,v가 찍힐 때는 정수로 표현된다). 만약 옛날 TV에 노이즈가 낀 것 처럼 특정 함수가 추가되어 안보일 때 fourier spectrum의 특정 peak를 지우고 푸리에 역변환을 수행하면 해당 노이즈를 지울 수 있을 것 같다.
+
+3. phase
+	파동은 어떤 주기적인 특징들을 가지고 있는데 이런 주기 만큼 특징적인 부분이 첫 스타트, phase, 위상이다. phase는 원본 신호를 주기 신호(정현파)로 분해했을 때 각 주기 성분들의 시작 점이 어디인지 나타낸다. 2차원 이미지 신호 역시 1차원으로 투영해서 하기 때문에 1차원 기준으로 f(t)인 신호의 계수 F(u)는 다음과 같이 분해된다.(각각 유클리드 좌표와 극좌표계 표현)
+	$$
+	F(u) = R(u) + iI(u) = |F(u)|e^{i\phi(u)}
+	$$
+	복소평면에서 F(u)는 (R(u), I(u))에 각도는 $\phi(u)$이다.
+	$$
+	f(t) = \int_{-\infty}^{\infty}F(u)e^{i\omega t} du = \int_{-\infty}^{\infty}|F(u)|e^{i\phi(u)}e^{i\omega t} du = \int_{-\infty}^{\infty}|F(u)|e^{i(\phi(u) + \omega t)} du
+	$$
+	기초적인 파동방정식의 $2\pi f t= \omega t$ 항에 시작 점인 위상 $\phi (u)$가 들어간 형태임을 직관적으로 이해할 수 있다. 만약 가운데 저주파 신호들 긴 파장 대의 신호들이 모여있다면, 이미지에서 밝기의 변화가 시작되는 위치, 시작점, 윤곽을 위상만으로 알아낼 수 있다. magnitude와 phase 둘 중 더 많은 정보를 가지고 있는 것이 있는가?? 아니면 둘 중 하나를 필터링해서 유지시킨다면 어떤 것을 유지해야 하는가?? (참조 : Magnitude and Phase by Deepa Kundur)
+	![[Pasted image 20241016010511.png|200]] ![[Pasted image 20241016010651.png|200]]![[Pasted image 20241016010710.png|200]]
+	우측 사진은 좌측 사진에 대해 각 magnitude spectrum, phase로 나타낸 값이다. 첫 번째 사진은 spectrum을 보존하고 phase = 0, 두 번째 사진은 phase를 보존하고 spectrum을 1에 normalized 하여 나타냈다. 세 번째 사진은 각 대상의 spectrum과 phase를 서로 바꾸어 적용.
+	![[Pasted image 20241016011155.png|200]]![[Pasted image 20241016011220.png|200]]![[Pasted image 20241016011239.png|200]]
+	두 번째 사진이 잘 안보일 수 있지만 외곽선 추출이 잘 되었다. specturm의 경우 색깔, 밝기의 명암 부분을 드러내고 phase는 밝기가 바뀌는 부분, 구조나 형태를 잘 나타내는 것을 알 수 있다.
+#### Fast Fourier Transform
+
+1. 복소평면 파트
+	복소 평면에서 하나의 구를 상상했을 때, 이를 8등분, 가장 
+
+
+#### Spherical Harmonics
