1st complete fourier

--- a/cg/2024-10-17.md
+++ b/cg/2024-10-17.md
@@ -2,7 +2,7 @@
 
 1. 푸리에 급수 관련 수학
 
-     모든 주기적 신호는 서로 다른 크기의 amplitude, frequency를 갖는 정현파(삼각함수)들의 합으로 만들 수 있다. 푸리에 급수에서는 사인 함수와 코사 사인 함수가 basis funciton이다. 주어진 함수 f(t)가 각 basis 에 얼만큼 기여하는지 나타내는 것이 푸리에 계수이다.
+     모든 주기적 신호는 서로 다른 크기의 amplitude, frequency를 갖는 **정현파**(삼각함수)들의 합으로 만들 수 있다. 푸리에 급수에서는 사인 함수와 코사 사인 함수가 basis funciton이다. 주어진 함수 f(t)가 각 basis 에 얼만큼 기여하는지 나타내는 것이 푸리에 계수이다.
 $$
 f(t) = a_0 + a_1 \cos(\omega t) + a_2 \cos(2\omega t) + \cdots + a_n \cos(n\omega t) 
 + b_1 \sin(\omega t) + \cdots + b_n \sin(n\omega t)
@@ -114,18 +114,7 @@ $$
 
     두 번째 사진이 잘 안보일 수 있지만 외곽선 추출이 잘 되었다. specturm의 경우 색깔, 밝기의 명암 부분을 드러내고 phase는 밝기가 바뀌는 부분, 구조나 형태를 잘 나타내는 것을 알 수 있다.
 
-#### Fast Fourier Transform
 
-1. 복소평면 파트
-
-    예를 들어서 변수가 8개 있는 $f(x) = a_0 + a_1{x_1} + ... + a_8{x_8}$을 생각했을 때, 복소평면에서 크기와 위상 차가 일정하게 8등분 된 $\omega_0, \omega_1, ..., \omega_7$에 대한 $f(\omega)$ 값을 알고 있다고 하자. 
-
-  
-  
-https://valdes.cc/articles/ch.html
-https://xoft.tistory.com/50
-https://shorturl.at/TaGye
-https://shorturl.at/hNhBV
 
 #### Spherical Harmonics
 
@@ -179,3 +168,38 @@ https://shorturl.at/hNhBV
 		(h*f)_{l}^{m} = \sqrt{ {4\pi}\over_{2l+1}}h_{l}^{0}f_{l}^{m}
 		$$
 		실제 convolution연산을 하지 않고 가중치만 곱함으로써 구할 수 있다.
+		앞서 말했듯, SH는 서로 다른 l과 m 간의 basis function들은 서로 orthogonal 하기 때문에 내적이 0이다. 더 나아가 정규화 constant $K_{l}^m$이 자기 자신에 대한 내적이 1임을 만들게 한다 : orthonormality. 이를 수학적으로 다음과 같이 표현한다.
+		$$
+		\int_{\Omega_{4\pi}}{y_{i}(\vec{\omega})y_{j}(\vec{\omega})d \vec{\omega}} = \delta_{ij},\quad \delta_{ij} = 0\;(\text{if } i\neq j), =1(\text{if } i=j)
+		$$
+		$\delta_{ij}$를 Kronecker delta function 이라고 한다. 다음과 같이 나타낼 수도 있다.
+		$$
+		\int_{\theta = 0}^{\pi} \int_{\phi = 0}^{2\pi} {y_{l}^{m}y_{l^{'}}^{m^{'}}d\Omega} = \delta_{ll'}\delta_{mm'}, \quad d\Omega = \sin \theta d\phi d\theta
+		$$
+		이를 통해 SH basis 꼴의 두 함수 간 곱을 쉽게 표현할 수 있다.
+		
+	5. An Efficient Representation for Irradiance Environment Maps
+
+	다시 정리해서 구면 좌표계에서 어떤 함수 $f(\theta, \phi)$를 구면 조화 함수로 표현할 때, 함수는 다음과 같이 표현될 수 있다. 이를 SH basis로 표현한다고 볼 수 있다.
+		$$
+		f(\theta, \phi) = \sum_{l=0}^{\infty}\sum_{m=-l}^{l}c_{lm}Y_{lm}(\theta, \phi) = \sum_{l,m}c_{lm}Y_{lm}(\theta, \phi)
+		$$
+		여기서 Y는 구면 조화 함수로 구면에 대응 시켜주게 분해되는 항이다. c는 fourier의 amplitude처럼 해당 항이 얼마나 f에 영향을 미치는지 정도를 알려준다. l은 각 구면 조화 함수의 degree, 차수가 되고 m은 l degree에 대한 자유도라고 볼 수 있다.
+		복잡한 계산이 걸리는 natural illumination을 효율적으로 계산하기 위해 Spherical Harmonics를 이용해서 주변 광원들의 변화를 간단하게 처리할 수 있도록 해준다. __Irradiance__ 은 표면에 입사하는 전체 빛의 양으로 direct 뿐 아니라 scattered된 빛도 계산한다. $\mathbf{n}$이 포함된 것으로 보아 표면 법선 벡터에 대한 함수의 일종이라는 것을 알 수 있다.
+		$$E(\mathbf{n})=\int_{\Omega(\mathbf{n})}L(\omega)(\mathbf{n}\cdot \omega)d\omega $$
+		$$ L_{0}(\mathbf{x}, \omega) = {\rho_{d}\over \pi} \int_{\Omega}L_{i}(\mathbf{x}, \omega')(\omega' \cdot \mathbf{n})d\omega'$$
+		이를 통해 난반사나 조도 계산을 포함한 이미지의 밝기(B)를 albedo, $\rho_{d}$와 들어오는 빛의 양인 Irradiance(E)의 곱으로 나타낼 수 있다. SH 투영 $L_{lm}$은 비싸기 때문에 environment map을 통해 연산을 간소화 할 수 있다. 위 E와 L 모두 SH basis 꼴로 표현할 수 있다. $A=(\vec{n}\cdot \omega)$로 구면을 통과하는 가중치 값으로 표현한 것이라고 생각할 수 있다.
+		$$
+		L(\theta, \phi) = \sum_{l, m}L_{lm},Y_{lm}(\theta, \phi),\quad E(\theta , \phi) = \sum_{l,m}E_{lm}Y_{lm}(\theta,\phi) = \sum_{l,m}\hat{A}_{l}L_{lm}Y_{lm}(\theta, \phi)
+		$$
+		여기서 irradiance는 phi에 의존하지 않는다고 가정하고 theta인 l = 0, 1, 2 항들만 사용하여 근사할 수 있다.  이를 통해 irradiance를 SH의 계수로 표현하여 복잡한 광원 환경을 근사할 수 있다.
+		
+
+
+
+참조)
+https://darkpgmr.tistory.com/171
+https://valdes.cc/articles/ch.html
+https://xoft.tistory.com/50
+https://shorturl.at/TaGye
+https://shorturl.at/hNhBV
