--- a/cg/2024-10-17.md
+++ b/cg/2024-10-17.md
@@ -144,9 +144,10 @@ $$
 	K_l^m = \sqrt{{(2l + 1)(l - |m|)!}\over{4\pi(l +|m|)!}}, \quad
 	P_l^{|m|}(\cos\theta)=(-1)^m{{(l+|m|)!}\over{(l-|m|)!}}P_l^{-|m|}(\cos\theta)
 	$$
-	각각 cartesian 좌표계와 spherical 좌표계로 표현가능하고 l에 따른 식은 [위키피디아](https://en.wikipedia.org/wiki/Table_of_spherical_harmonics)에 자세한 내용을 볼 수 있다. 계수인 $K_{l}^{m}$과 $P_{l}^{|m|}$에 대해서는 constant값으로 구할 수 있다.
+	각각 cartesian 좌표계와 spherical 좌표계로 표현가능하고 l에 따른 식은 [위키피디아](https://en.wikipedia.org/wiki/Table_of_spherical_harmonics)에 자세한 내용을 볼 수 있다. 계수인 $K_{l}^{m}$과 $P_{l}^{|m|}$에 대해서는 constant값으로 구할 수 있다. K는 정규화에 대한 배율 계수, P는 르장드르 다항식이라고 한다. 실제 구현에서 구면 조화 함수는 table로 어느정도 구해져 있기 때문에 사용하기 쉽다. (x, y, z) 좌표계를 구면 좌표계에 수정하여 넣기만 하면 된다.
 	![[Pasted image 20241016153705.png|400]]
-	visualization으로는 위와 같다. 화학에 오비탈 부분에서 본 것 같다. 3d 모델에서 여러 광원에서 들어오는 빛을 real-time으로 계산하고 표현할 수 있다고 한다. 위 식은 complex spherical harmonic이고 우리는 실수부인 real shperical harmonic의 basis $y_{l}^{m}(\theta, \phi)$를 볼 것이고 e의 지수항을 오일러로 분해해서 실수부만 추출하면 된다. projection은 기존 data를 RSH 공간으로 변환하여 계산하는데 사용된다. projection을 이용해 data에서 RSH의 계수를 추출하는데 필요하게 된다. projection(coefficients) $f_{l}^{m}$는 basis function y로부터 다음과 같이 구할 수 있다. 여기서는 [해당 위키](https://en.wikipedia.org/wiki/Spherical_harmonics)를 참조했다.
+	visualization으로는 위와 같다. 화학에 오비탈 부분에서 본 것 같다. 3d 모델에서 여러 광원에서 들어오는 빛을 real-time으로 계산하고 표현할 수 있다고 한다. 위 식은 complex spherical harmonic이고 우리는 실수부인 real shperical harmonic의 basis $y_{l}^{m}(\theta, \phi)$를 볼 것이고 e의 지수항을 오일러로 분해해서 실수부만 추출하면 된다.
+	 projection은 기존 data를 RSH 공간으로 변환하여 계산하는데 사용된다. projection을 이용해 data에서 RSH의 계수를 추출하는데 필요하게 된다. projection(coefficients) $f_{l}^{m}$는 basis function y로부터 다음과 같이 구할 수 있다. 여기서는 [해당 위키](https://en.wikipedia.org/wiki/Spherical_harmonics)를 참조했다.
 	$$
 	f_{l}^{m} = \int_{\Omega _{4\pi}}{y_{l}^{m}(\vec{\omega})f(\vec{\omega })d \vec{\omega }} = {\int_{0}^{2\pi}d\phi}{\int_{0}^{\pi}d\theta \sin \theta f(\theta, \phi)y_{l}^{m}(\theta,\phi)}
 	$$
@@ -178,28 +179,80 @@ $$
 		$$
 		이를 통해 SH basis 꼴의 두 함수 간 곱을 쉽게 표현할 수 있다.
 		
-	5. An Efficient Representation for Irradiance Environment Maps
-
-	다시 정리해서 구면 좌표계에서 어떤 함수 $f(\theta, \phi)$를 구면 조화 함수로 표현할 때, 함수는 다음과 같이 표현될 수 있다. 이를 SH basis로 표현한다고 볼 수 있다.
-		$$
-		f(\theta, \phi) = \sum_{l=0}^{\infty}\sum_{m=-l}^{l}c_{lm}Y_{lm}(\theta, \phi) = \sum_{l,m}c_{lm}Y_{lm}(\theta, \phi)
-		$$
-		여기서 Y는 구면 조화 함수로 구면에 대응 시켜주게 분해되는 항이다. c는 fourier의 amplitude처럼 해당 항이 얼마나 f에 영향을 미치는지 정도를 알려준다. l은 각 구면 조화 함수의 degree, 차수가 되고 m은 l degree에 대한 자유도라고 볼 수 있다.
-		복잡한 계산이 걸리는 natural illumination을 효율적으로 계산하기 위해 Spherical Harmonics를 이용해서 주변 광원들의 변화를 간단하게 처리할 수 있도록 해준다. __Irradiance__ 은 표면에 입사하는 전체 빛의 양으로 direct 뿐 아니라 scattered된 빛도 계산한다. $\mathbf{n}$이 포함된 것으로 보아 표면 법선 벡터에 대한 함수의 일종이라는 것을 알 수 있다.
-		$$E(\mathbf{n})=\int_{\Omega(\mathbf{n})}L(\omega)(\mathbf{n}\cdot \omega)d\omega $$
-		$$ L_{0}(\mathbf{x}, \omega) = {\rho_{d}\over \pi} \int_{\Omega}L_{i}(\mathbf{x}, \omega')(\omega' \cdot \mathbf{n})d\omega'$$
-		이를 통해 난반사나 조도 계산을 포함한 이미지의 밝기(B)를 albedo, $\rho_{d}$와 들어오는 빛의 양인 Irradiance(E)의 곱으로 나타낼 수 있다. SH 투영 $L_{lm}$은 비싸기 때문에 environment map을 통해 연산을 간소화 할 수 있다. 위 E와 L 모두 SH basis 꼴로 표현할 수 있다. $A=(\vec{n}\cdot \omega)$로 구면을 통과하는 가중치 값으로 표현한 것이라고 생각할 수 있다.
-		$$
-		L(\theta, \phi) = \sum_{l, m}L_{lm},Y_{lm}(\theta, \phi),\quad E(\theta , \phi) = \sum_{l,m}E_{lm}Y_{lm}(\theta,\phi) = \sum_{l,m}\hat{A}_{l}L_{lm}Y_{lm}(\theta, \phi)
-		$$
-		여기서 irradiance는 phi에 의존하지 않는다고 가정하고 theta인 l = 0, 1, 2 항들만 사용하여 근사할 수 있다.  이를 통해 irradiance를 SH의 계수로 표현하여 복잡한 광원 환경을 근사할 수 있다.
+	5. **An Efficient Representation for Irradiance Environment Maps**
+	   
+	   Irradiance Map은 해당 좌표에서 들어오는 모든 광원의 양을 image화 시킨다. diffuse 반사를 위해 사전에 이미지를 필터링하여 빠르게 광원 효과를 구할 수 있게 해준다. 따라서 360도 구면 전 방위에 대해 반사되는 radiance를 다음과 같이 구했다.
+	   $$
+	   L_{0}(\mathbf{x},\omega)={\rho_{d} \over \pi} \int_{\Omega}{L_{i}(\mathbf{x},\omega')}(\omega'\cdot \mathbf{n})d\omega'
+	   $$
+	   $\mathbf{x}$인 surface로부터 빛이 camera 쪽으로 향하는 $\omega$ 로 이루어진 radiance에 대해서 Lambertian BRDF constant와 반구 공간에서 입사되는 radiance인 $L_{i}$ 를 적분하여 얻어낼 수 있다. 여기서 Lambertian 파트를 제외하면 irradiance가 된다.
+	   $$
+	   E(\mathbf{x}) = \int_{\Omega}L_{i}(\mathbf{x}, \omega')(\omega' \cdot \mathbf{n})d\omega'
+	   $$
+	   이를 구면 좌표계 파트로 표현하면 다음과 같다.
+	   $$
+	   \int_{\phi = 0}^{2\pi} \int_{\theta=0}^{\pi}L(\theta, \phi)\cos \theta \sin \theta d\theta d\phi
+	   $$
+	   따라서 상수 부분을 합쳐서 알베도 $\rho$라고 간주하고 전체 빛의 radiosity를 다음과 같이 표현한다.
+	   $$
+	   L_{o}{(\mathbf{x}, \omega)} = \rho E(\mathbf{x})
+	   $$
+	   여기서 우리가 배운 구면 조화 함수를 적용시킬 수 있다. 구면 조화 함수의 실수 부분은 아래와 같이 표현 할 수 있다.
+	   ![[Pasted image 20241017011005.png|600]]
+	   P 부분의 르장드르 polymonial도 복잡하게 표현되지만 l과 m의 범위 내에 constant 값을 가지고 있다. 이를 통해 $y_{0}^{0}(\mathbf{n})$부터 $y_{2}^{2}(\mathbf{n})$ 뿐 만아니라 더 많은 l과 m으로 부터 구면 조화 함수를 미리 setting 할 수 있다.
+	   이를 irradiance Map에 어떻게 적용할 수 있을까?? 우리는 지금까지 여러 basis를 통해 모르는 복잡한 함수 f(x)를 basis function의 series로 구할 수 있음을 알아 왔기 때문에 irradiance map 역시 SH basis의 series로 표현할 수 있다. 여기서 항상 basis에 amplitude가 곱해져 왔는데 이를 projection(투영)이라고 볼 수 있다. F(u)를 구했듯이 우리는 원본 함수의 전체 범위에 대해 basis function과 곱을 적분해서 나타낼 수 있다. 다시 푸리에 변환 쪽을 다시 쓰면,
+	   $$
+	   F(u) = \int_{-\infty}^{\infty} f(t) e^{-i 2 \pi u t}, \quad \text{general하게 쓰자면}\quad c_{i} =\int f(x)b_{i}(x)
+	   $$
+	   irradiance map을 다시 볼 때, $\cos\theta$는 $A=\mathbf{n}\cdot \omega$를 표현한 것으로 orthonormal 하기 때문이다.
+	   $$
+	   \int_{\theta=0}^{\pi}\int_{\phi=0}^{2\pi}L(\theta ,\phi)\cos \theta \sin \theta d\phi d\theta
+	   $$
+	   구 전체애 대한 radiance 적분이 곱해지면 반구에 대한 역반사? 값을 무시하기 위해서 $max(\cos \theta, 0)$으로 새롭게 표현할 수 있다. 그리고 projection을 통해서 각 basis의 계수를 구할 수 있게 된다. 위 식에서 cos theta를 제외하고 구면조화식을 곱해준 것이다.
+	   $$
+	   L_{lm} = \int_{\theta=0}^{\pi}\int_{\phi=0}^{2\pi}L(\theta,\phi)y_{l}^{m}(\theta,\phi)\sin \theta d\phi d\theta
+	   $$
+	   cos항을 따로 분리해서 A의 구면 조화 계수를 구한다면 이는 phi에 독립적이기 때문에,
+	   $$
+	   A_{l}=\int_{\theta=0}^{\pi}max(\cos \theta,0)y_{l}^{0}(\theta,0),d\theta
+	   $$
+	   이렇게 구한 두 계수를 통해 irradiance를 복원할 수 있다. irradiance의 구면조화 함수 계수 $E_{lm}$에 대하여\
+	   $$
+	   E(\theta,\phi)=\sum_{l,m}E_{lm}y_{l}^m(\theta, \phi),\quad E_{lm}=\sqrt{ 4\pi \over{2l + 1} }A_{l}L_{lm}
+	   $$
+	   여기서 $\sqrt{ \frac{4\pi}{2l+1} }$은 model position 에서 계산된 A의 구면 조화 계수를 wpos로 변환하는 과정에서 가중치라고 한다. 자세한 이해는 추후에 진행해야 할 것 같다. 이전에 공부한 convolution과 큰 관계가 있을 것 같다. 편의를 위해,
+	   $$
+	   \hat{A}_{l} = \sqrt{ \frac{4\pi}{2l+1} }A_{l}
+	   $$
+	   이라 하고 table로 미리 계산하여 constant로 사용한다고 한다. 이는 수치가 좀 빠르게 감소하는 모습을 볼 수 있다. 그렇기 때문에 l = 2까지 근사하여 계산해도 큰 오차가 없다.
+	   ![[Pasted image 20241017014806.png|200]]
+	   
+	    마지막으로 특정 surface에 대한 irradiance E는 다음과 같이 나타낸다.
+	    $$
+	    E(\theta,\phi) = \sum_{l, m}\hat{A}_{l}L_{lm}Y_{lm}(\theta,\phi)
+	    $$
+	   l = 2까지 쉽게 계산하기 위해서 4 by 4 matrix를 이용하여 계산한다. normal vector $n^T=(\text{x  y z 1})$이라고 할 때, 
+	   $$
+	   E(\mathbf{n}) = \mathbf{n}^T M \mathbf{n}
+	   $$
+	   $$
+	   M = \begin{pmatrix}
+c_{1}L_{22} & c_{1}L_{2-2} & c_{1}L_{21} & c_{2}L_{11} \\
+c_{1}L_{2-2} & -c_{1}L_{22} & c_{1}L_{2-1} & c_{2}L_{1-1} \\
+c_{1}L_{21} & c_{1}L_{2-1} & c_{3}L_{20} & c_{2}L_{10} \\
+c_{2}L_{11} & c_{2}L_{1-1} & c_{2}L_{10} & c_{4}L_{00}-c_{5}L_{20}
+\end{pmatrix}
+	   $$
+	   이며 c1, c2, c3, c4, c5 constant 는 주어져 있기 때문에 해당 x, y, z 값을 넣기만 하면 된다.
 		
 
 
 
 참조)
+course-rt-07-sph 교안
 https://darkpgmr.tistory.com/171
 https://valdes.cc/articles/ch.html
 https://xoft.tistory.com/50
 https://shorturl.at/TaGye
 https://shorturl.at/hNhBV
+Spherical Harmonic Lighting: The Gritty Details, Robin Green, 2003
