start SHL;gritty

--- a/cg/2024-10-17.md
+++ b/cg/2024-10-17.md
@@ -47,7 +47,7 @@ $$
 
 2. 복소 평면 표현
 
-    다시 정리해서 삼각함수들의 무한 급수를 푸리에 급수로 나타낼 수 있다. 각 계수 $a_n$은 amplitude로 어느 만큼의 파동이 섞여 있는 지 알 수 있고 파동 자체는 각자의 frequency와 pahse를 가지고 있다. 오일러 공식을 통해 사인파를 $e^{in\omega t}$꼴의 복소지수로 나타낼 수 있기 때문에 복소 평면으로 쉽게 amplitude와 phase를 표현할 수 있다.
+    다시 정리해서 삼각함수들의 무한 급수를 푸리에 급수로 나타낼 수 있다. 각 계수 $a_n$은 amplitude로 어느 만큼의 파동이 섞여 있는 지 알 수 있고 파동 자체는 각자의 frequency와 phase 가지고 있다. 오일러 공식을 통해 사인파를 $e^{in\omega t}$꼴의 복소지수로 나타낼 수 있기 때문에 복소 평면으로 쉽게 amplitude와 phase를 표현할 수 있다.
 
 #### Fourier Transform
 
@@ -108,13 +108,11 @@ $$
 
     ![[Pasted image 20241016010511.png|200]] ![[Pasted image 20241016010651.png|200]]![[Pasted image 20241016010710.png|200]]
 
-    우측 사진은 좌측 사진에 대해 각 magnitude spectrum, phase로 나타낸 값이다. 첫 번째 사진은 spectrum을 보존하고 phase = 0, 두 번째 사진은 phase를 보존하고 spectrum을 1에 normalized 하여 나타냈다. 세 번째 사진은 각 대상의 spectrum과 phase를 서로 바꾸어 적용.
+    우측 사진은 좌측 사진에 대해 각 magnitude spectrum, phase로 나타낸 값이다. 아래의 첫 번째 사진은 spectrum을 보존하고 phase = 0, 두 번째 사진은 phase를 보존하고 spectrum을 1에 normalized 하여 나타냈다. 세 번째 사진은 각 대상의 spectrum과 phase를 서로 바꾸어 적용.
 
     ![[Pasted image 20241016011155.png|200]]![[Pasted image 20241016011220.png|200]]![[Pasted image 20241016011239.png|200]]
 
     두 번째 사진이 잘 안보일 수 있지만 외곽선 추출이 잘 되었다. specturm의 경우 색깔, 밝기의 명암 부분을 드러내고 phase는 밝기가 바뀌는 부분, 구조나 형태를 잘 나타내는 것을 알 수 있다.
-
-
 
 #### Spherical Harmonics
 
@@ -256,3 +254,4 @@ https://xoft.tistory.com/50
 https://shorturl.at/TaGye
 https://shorturl.at/hNhBV
 Spherical Harmonic Lighting: The Gritty Details, Robin Green, 2003
+Magnitude and Phase, Deepa Kundur, University of Toronto
