fix typo, add ref

--- a/cg/2024-10-17.md
+++ b/cg/2024-10-17.md
@@ -2,7 +2,7 @@
 
 1. 푸리에 급수 관련 수학
 
-     모든 주기적 신호는 서로 다른 크기의 amplitude, frequency를 갖는 **정현파**(삼각함수)들의 합으로 만들 수 있다. 푸리에 급수에서는 사인 함수와 코사 사인 함수가 basis funciton이다. 주어진 함수 f(t)가 각 basis 에 얼만큼 기여하는지 나타내는 것이 푸리에 계수이다.
+     모든 주기적 신호는 서로 다른 크기의 amplitude, frequency를 갖는 **sinusoidal wave**(삼각함수)들의 합으로 만들 수 있다. 푸리에 급수에서는 사인 함수와 코사인, 사인 함수가 basis funciton이다. 주어진 함수 f(t)가 각 basis 에 얼만큼 기여하는지 나타내는 것이 푸리에 계수이다.
 $$
 f(t) = a_0 + a_1 \cos(\omega t) + a_2 \cos(2\omega t) + \cdots + a_n \cos(n\omega t) 
 + b_1 \sin(\omega t) + \cdots + b_n \sin(n\omega t)
@@ -35,7 +35,7 @@ $$
 
 $$
 
-즉 복잡한 푸리에급수 f(t) 에 대하여 각 n차 항들의 계수를 알아낼 수 있다. 여기서 오일러 공식을 푸리에 급수에 대입한다면 다음과 같이 정리할 수 있다.
+즉 복잡한 푸리에 급수 f(t) 에 대하여 각 n차 항들의 계수를 알아낼 수 있다. 여기서 오일러 공식을 푸리에 급수에 대입한다면 다음과 같이 정리할 수 있다.
 
 $$
 
@@ -55,7 +55,7 @@ $$
     1. 주기함수들은 sin, cos 함수로 나타낼 수 있다
     2. 모든 파동들은 주기 함수의 합(series)으로 나타낼 수 있고(분해) 역변환이 가능하다
     3. fourier transform을 통해 계수(amplitude)와 파장(frequency)을 구할 수 있다
-     전파나 음성 신호 같은 t, time domain -> frequency domain을 뽑아낼 수 있고, image의 경우에는 공간축으로 정의될 수도 있다(spatial domain -> frequency domain)
+     전파나 음성 신호 같은 t, time domain -> frequency domain을 뽑아낼 수 있고, image의 경우에는 공간 축으로 정의될 수도 있다(spatial domain -> frequency domain)
      ![[Pasted image 20241016122712.png|400]]
      이미지를 필터링 할 때에도 time domain 함수에서 특정 주파수를 다루는 것보다 frequency domain에서 frequency 값을 쓰면 되기 때문에 더 편하다.
 
@@ -71,9 +71,9 @@ F(u) = \int_{-\infty}^{\infty} f(x) e^{-i 2 \pi u x} \, dx, \quad (\omega = 2 \p
 
     왜 분해하고 싶은 주기함수 성분을 오히려 적분을 하는가???
 
-    특정 사인파가 신호에 얼마나 포함되었는가를 확인하기 위해 각 지점에서 신호의 사인파를 곱한 면적을 구한다. 대부분에 경우에서 연속된 샘플과 구간의 경우 면적의 합은 항상 0이다. 하지만 파동의 특정 frequency와 주기 함수의 frequency(u)가 일치하는 경우, 면적의 합이 0이 아니다. 이런 사인파의 모든 frequency에 대해 면적을 구해여 frequency graph를 얻을 수 있다. 특정 frequency(u)가 어느 amplitude 만큼 포함되어 있는지. 이때 사인파와 코사인파를 모두 적용해야하는데 오일러 식을 통해 신호의 위상 표현식으로 구한다. 반대로 원본 f(x) 역시 F(u)에 넣는 u 샘플들의 적분으로 구할 수 있다. 위의 식에서 u가 0, ±1, ±2 ... 라면 이런 신호는 basis가 서로 직교함을 알 수 있다.
+    특정 사인파가 신호에 얼마나 포함되었는가를 확인하기 위해 각 지점에서 신호의 사인파를 곱한 면적을 구한다. 대부분에 경우에서 연속된 샘플과 구간의 경우 면적의 합은 항상 0이다. 하지만 파동의 특정 frequency와 주기 함수의 frequency(u)가 일치하는 경우, 면적의 합이 0이 아니다. 이런 사인파의 모든 frequency에 대해 면적을 구하여 frequency graph를 얻을 수 있다. 특정 frequency(u)가 어느 amplitude 만큼 포함되어 있는지. 이때 사인파와 코사인파를 모두 적용해야하는데 오일러 식을 통해 신호의 위상 표현식으로 구한다. 반대로 원본 f(x) 역시 F(u)에 넣는 u 샘플들의 적분으로 구할 수 있다. 위의 식에서 u가 0, ±1, ±2 ... 라면 이런 신호는 basis가 서로 직교함을 알 수 있다.
     $$ F(u) = \int_{-\infty}^{\infty} f(t) e^{-i 2 \pi u t} \, dt, \quad f(t) = \int_{-\infty}^{\infty} F(u) e^{i 2 \pi u t} \, du $$
-    왠지 생김새가 주어진 함수에서 다양한 frequency를 갖는 정현파들의 correlation 시킨 것 같다.
+    왠지 생김새가 주어진 함수에서 다양한 frequency를 갖는 sinusoidal들의 correlation 시킨 것 같다.
 
 3. 이미지에서 Fourier transform
     위 수식에서 f(t)를 시간 도메인 함수라고 부르고 우리가 변환해야 할 대상 신호를 나타내는 함수이다. 이미지에서는 f(x. y) 꼴의 2차원 함수이고 공간 도메인 함수라고 부른다.
@@ -102,7 +102,7 @@ $$
     
 
 3. phase
-	파동은 어떤 주기적인 특징들을 가지고 있는데 이런 주기 만큼 특징적인 부분이 첫 스타트, phase, 위상이다. phase는 원본 신호를 주기 신호(정현파)로 분해했을 때 각 주기 성분들의 시작 점이 어디인지 나타낸다. 2차원 이미지 신호 역시 1차원으로 투영해서 하기 때문에 1차원 기준으로 f(t)인 신호의 계수 F(u)는 다음과 같이 분해된다.(각각 cartisian 좌표와 극좌표계 표현)$$F(u) = R(u) + il(u) = |F(u)|e^{i\phi(u)}$$
+	파동은 어떤 주기적인 특징들을 가지고 있는데 이런 주기 만큼 특징적인 부분이 첫 스타트, phase, 위상이다. phase는 원본 신호를 주기 신호(sinusoidal)로 분해했을 때 각 주기 성분들의 시작 점이 어디인지 나타낸다. 2차원 이미지 신호 역시 1차원으로 투영해서 하기 때문에 1차원 기준으로 f(t)인 신호의 계수 F(u)는 다음과 같이 분해된다.(각각 cartisian 좌표와 극좌표계 표현)$$F(u) = R(u) + il(u) = |F(u)|e^{i\phi(u)}$$
     복소 평면에서 F(u)는 (R(u), l(u))에 각도는 $\phi(u)$이다.$$f(t) = \int_{-\infty}^{\infty}F(u)e^{i\omega t} du = \int_{-\infty}^{\infty}|F(u)|e^{i\phi(u)}e^{i\omega t} du = \int_{-\infty}^{\infty}|F(u)|e^{i(\phi(u) + \omega t)} du$$
      기초적인 파동방정식의 $2\pi f t= \omega t$ 항에 시작 점인 위상 $\phi (u)$가 들어간 형태임을 직관적으로 이해할 수 있다. 만약 가운데 저주파 신호들 긴 파장 대의 신호들이 모여있다면, 이미지에서 밝기의 변화가 시작되는 위치, 시작점, 윤곽을 위상만으로 알아낼 수 있다. magnitude와 phase 둘 중 더 많은 정보를 가지고 있는 것이 있는가?? 아니면 둘 중 하나를 필터링해서 유지시킨다면 어떤 것을 유지해야 하는가?? (참조 : Magnitude and Phase by Deepa Kundur)
 
@@ -120,7 +120,7 @@ $$
 	$$
 	{\rho_d} = \int_{\Omega}{f_r(\mathbf {x}, \omega ^{'}, \omega)(\omega^{'}\cdot \mathbf{n}) d\omega^{'}}
 	$$
-	위 식은 들어오는 빛에 대한 반구형 directional reflectance, 반사율(albedo)이다. 여기서 $f_r(\mathbf{x}, \omega^{'}, \omega)$ 항이 BRDF이다. $\mathbf x$는 빛을 받는 좌표, $\mathbf n$은 해당 표면의 normal 벡터, $\omega^{'}$은 빛이 들어오는 방향 벡터, $\omega$는 카메라로 가는 반사 벡터라고 볼 수 있다. $f_r$ 은 현실적인 빛의 반사를 표현하기위해 표면의 질감, 반사율 등을 이용해 $\omega$방향으로 가는 빛의 양을 리턴한다. 대부분의 경우 복잡한 물리량으로 표현되지만 real-time에 실행하기 위해서 constant 값을 넣기도 한다.
+		위 식은 들어오는 빛에 대한 반구형 directional reflectance, 반사율(albedo)이다. 여기서 $f_r(\mathbf{x}, \omega^{'}, \omega)$ 항이 BRDF이다. $\mathbf x$는 빛을 받는 좌표, $\mathbf n$은 해당 표면의 normal 벡터, $\omega^{'}$은 빛이 들어오는 방향 벡터, $\omega$는 카메라로 가는 반사 벡터라고 볼 수 있다. $f_r$ 은 현실적인 빛의 반사를 표현하기 위해 표면의 질감, 반사율 등을 이용해 $\omega$방향으로 가는 빛의 양을 리턴한다. 대부분의 경우 복잡한 물리량으로 표현되지만 real-time에 실행하기 위해서 constant 값을 넣기도 한다.
 	$$
 	{\rho_d} = f_r\int_{\Omega}{(\omega^{'}\cdot \mathbf{n}) d\omega^{'}} = f_r\pi
 	$$
@@ -142,18 +142,18 @@ $$
 	K_l^m = \sqrt{{(2l + 1)(l - |m|)!}\over{4\pi(l +|m|)!}}, \quad
 	P_l^{|m|}(\cos\theta)=(-1)^m{{(l+|m|)!}\over{(l-|m|)!}}P_l^{-|m|}(\cos\theta)
 	$$
-	각각 cartesian 좌표계와 spherical 좌표계로 표현가능하고 l에 따른 식은 [위키피디아](https://en.wikipedia.org/wiki/Table_of_spherical_harmonics)에 자세한 내용을 볼 수 있다. 계수인 $K_{l}^{m}$과 $P_{l}^{|m|}$에 대해서는 constant값으로 구할 수 있다. K는 정규화에 대한 배율 계수, P는 르장드르 다항식이라고 한다. 실제 구현에서 구면 조화 함수는 table로 어느정도 구해져 있기 때문에 사용하기 쉽다. (x, y, z) 좌표계를 구면 좌표계에 수정하여 넣기만 하면 된다.
+	각각 cartesian 좌표계와 spherical 좌표계로 표현 가능하고 l에 따른 식은 [위키피디아](https://en.wikipedia.org/wiki/Table_of_spherical_harmonics)에 자세한 내용을 볼 수 있다. 계수인 $K_{l}^{m}$과 $P_{l}^{|m|}$에 대해서는 constant값으로 구할 수 있다. K는 정규화에 대한 배율 계수, P는 르장드르 다항식이라고 한다. 실제 구현에서 구면 조화 함수는 table로 어느정도 구해져 있기 때문에 사용하기 쉽다. (x, y, z) 좌표계를 구면 좌표계에 수정하여 넣기만 하면 된다.
 	![[Pasted image 20241016153705.png|400]]
 	visualization으로는 위와 같다. 화학에 오비탈 부분에서 본 것 같다. 3d 모델에서 여러 광원에서 들어오는 빛을 real-time으로 계산하고 표현할 수 있다고 한다. 위 식은 complex spherical harmonic이고 우리는 실수부인 real shperical harmonic의 basis $y_{l}^{m}(\theta, \phi)$를 볼 것이고 e의 지수항을 오일러로 분해해서 실수부만 추출하면 된다.
 	 projection은 기존 data를 RSH 공간으로 변환하여 계산하는데 사용된다. projection을 이용해 data에서 RSH의 계수를 추출하는데 필요하게 된다. projection(coefficients) $f_{l}^{m}$는 basis function y로부터 다음과 같이 구할 수 있다. 여기서는 [해당 위키](https://en.wikipedia.org/wiki/Spherical_harmonics)를 참조했다.
 	$$
 	f_{l}^{m} = \int_{\Omega _{4\pi}}{y_{l}^{m}(\vec{\omega})f(\vec{\omega })d \vec{\omega }} = {\int_{0}^{2\pi}d\phi}{\int_{0}^{\pi}d\theta \sin \theta f(\theta, \phi)y_{l}^{m}(\theta,\phi)}
 	$$
-	해당 projection으로 부터 Color 값에 대한 함수를 다음과 같이 표현할 수 있다. $y_{l}^{m}$ forms이 a set of orthonormal function이기 때문에, SH의 linear combination으로 확장할 수 있다. 직교하면서 정규하다는 것은 서로의 내적이 0, norm이 1이라는 뜻이다. 때문에 함수 공간의 basis를 형성하고 임의의 신호나 이미지로 된 함수를 해당 basis의 선형 결합으로 표현할 수 있게 해준다.
+	해당 projection으로부터 Color 값에 대한 함수를 다음과 같이 표현할 수 있다. $y_{l}^{m}$ forms이 a set of orthonormal function이기 때문에, SH의 linear combination으로 확장할 수 있다. 직교하면서 정규하다는 것은 서로의 내적이 0, norm이 1이라는 뜻이다. 때문에 함수 공간의 basis를 형성하고 임의의 신호나 이미지로 된 함수를 해당 basis의 선형 결합으로 표현할 수 있게 해준다.
 	$$
 	f(\vec{\omega})=\sum_{l=0}^{\infty}\sum_{m=-l}^{l}{f_{l}^{m}y_{l}^{m}(\vec{\omega})}
 	$$
-	위 두 식을 보면 l, m에서의 projection이 해당 l, m의 basis와 표면적의 밝기 값들의 면적분으로 표현할 수 있다. 반대로 해당 표면적의 밝기 값은 l, m의 표면적과 basis의 곱들의 sum으로 표현할 수 있다. 위에서 봤던 fourier transform의 forward와 inverse와 비슷한 형태인 것 같다. m이 -l, -l+1, .. 0, +1, ... +l의 구간을 갖고 l이 n차까지 존재할 때 다음과 같이 간소화 한다.
+	위 두 식을 보면 l, m 에서의 projection이 해당 l, m의 basis와 표면적의 밝기 값들의 면적분으로 표현할 수 있다. 반대로 해당 표면적의 밝기 값은 l, m의 표면적과 basis의 곱들의 sum으로 표현할 수 있다. 위에서 봤던 fourier transform의 forward와 inverse와 비슷한 형태인 것 같다. m이 -l, -l+1, .. 0, +1, ... +l의 구간을 갖고 l이 n차까지 존재할 때 다음과 같이 간소화 한다.
 	$$
 	\tilde{f}(\vec{\omega}) =\sum_{i=0}^{n^2-1}{y_{i}(\vec{\omega })f_{i}}
 	$$
@@ -206,19 +206,19 @@ $$
 	   $$
 	   \int_{\theta=0}^{\pi}\int_{\phi=0}^{2\pi}L(\theta ,\phi)\cos \theta \sin \theta d\phi d\theta
 	   $$
-	   구 전체애 대한 radiance 적분이 곱해지면 반구에 대한 역반사? 값을 무시하기 위해서 $max(\cos \theta, 0)$으로 새롭게 표현할 수 있다. 그리고 projection을 통해서 각 basis의 계수를 구할 수 있게 된다. 위 식에서 cos theta를 제외하고 구면조화식을 곱해준 것이다.
+	   구 전체에 대한 radiance 적분이 곱해지면 반구에 대한 역반사? 값을 무시하기 위해서 $max(\cos \theta, 0)$으로 새롭게 표현할 수 있다. 그리고 projection을 통해서 각 basis의 계수를 구할 수 있게 된다. 위 식에서 cos theta를 제외하고 구면조화식을 곱해준 것이다.
 	   $$
 	   L_{lm} = \int_{\theta=0}^{\pi}\int_{\phi=0}^{2\pi}L(\theta,\phi)y_{l}^{m}(\theta,\phi)\sin \theta d\phi d\theta
 	   $$
 	   cos항을 따로 분리해서 A의 구면 조화 계수를 구한다면 이는 phi에 독립적이기 때문에,
 	   $$
-	   A_{l}=\int_{\theta=0}^{\pi}max(\cos \theta,0)y_{l}^{0}(\theta,0),d\theta
+	   A_{l}=\int_{\theta=0}^{\pi}max(\cos \theta,0)y_{l}^{0}(\theta,0)d\theta
 	   $$
-	   이렇게 구한 두 계수를 통해 irradiance를 복원할 수 있다. irradiance의 구면조화 함수 계수 $E_{lm}$에 대하여\
+	   이렇게 구한 두 계수를 통해 irradiance를 복원할 수 있다. irradiance의 구면조화 함수 계수 $E_{lm}$에 대하여
 	   $$
 	   E(\theta,\phi)=\sum_{l,m}E_{lm}y_{l}^m(\theta, \phi),\quad E_{lm}=\sqrt{ 4\pi \over{2l + 1} }A_{l}L_{lm}
 	   $$
-	   여기서 $\sqrt{ \frac{4\pi}{2l+1} }$은 model position 에서 계산된 A의 구면 조화 계수를 wpos로 변환하는 과정에서 가중치라고 한다. 자세한 이해는 추후에 진행해야 할 것 같다. 이전에 공부한 convolution과 큰 관계가 있을 것 같다. 편의를 위해,
+	   여기서 $\sqrt{ \frac{4\pi}{2l+1} }$은 model position 에서 계산된 A의 구면 조화 계수를 wpos로 변환하는 과정에서 가중치라고 한다. 자세한 이해는 추후에 진행해야 할 것 같다. 이전에 공부한 convolution과 푸리에 변환이랑 관계가 있을 것 같다. 편의를 위해,
 	   $$
 	   \hat{A}_{l} = \sqrt{ \frac{4\pi}{2l+1} }A_{l}
 	   $$
