complete rex FFT, ongoing PVG

--- a/cg/2024-09-06-백민호(rex).md
+++ b/cg/2024-09-06-백민호(rex).md
@@ -124,7 +124,7 @@
 - view-projection matrix
 	- model -> world -> view(camera가 원점) -> clip
 	- {0,1,0,0, 0,0,1,0, -1,0,0,1, 0,0,0,1}, x -> y, y -> z, z -> -x에 축 맞추기
-	- ![[Pasted image 20240906143013.png]]
+	- ![[Coordinate.png]]
 
 #### ssbo
 
