--- a/cg/2024-11-08-rex FFT.md
+++ b/cg/2024-11-08-rex FFT.md
@@ -40,8 +40,6 @@
 			- 미리 계산되어 rpm에 맞게 순서가 바뀐 tex layer와 weight texture 적용
 			- 1 stage부터 log N stage까지 진행한다.
 			- TEX는 0과 1을 번갈아가면서 bind하여 사용
-				  
-				  
 
 - FFT.fx
 	- Real2Complex
@@ -87,5 +85,22 @@
 				
 				- hd = ivec2(1<<(stage-1))
 					- 상대적인 간격? cell 크기? 를 절반으로 나눔(weight 적용할 부분)
-				- 
+					- 하단, 상단으로 구분했을 때 다음과 같은 차이가 있다.
+					- ex) N = 8 중 k = 2, 하단의 경우
+					$Y(2)=S(2)+W_{2}T(2), Y(k)=S(k)+W_{k}T(k)$
+					k = 5, 상단의 경우
+					$Y(5) = S(1)-W_{1}T(1), Y(k)=S(k-hd)-W_{k-hd}T(k-hd)$
+					S(0)~S(3)과 T(0)~T(3) 역시
+					$S(0)=A(0)+W_{0}B(0)\dots S(3)=A(1)-W_{1}B(1)$
+					분해 가능 (T도 동일 한 방식으로 C, D)
+					계속 내려가서 kd = 1인 stage 1에서는 src 값 y()만으로 구한다
+					$X(0)=y(0)+y(1), X(1)=y(0)-y(1)$
+				- 유도를 할 때와는 반대로 실제로 현재 vertex k에 대한 FFT 값 Y(k)는 stage 1의 y(k)를 가지고 stage 2의 A, B, C, D를 구하고 stage 3로 가는 bottom up 방식이다. 
+					- 식의 일관성을 위해서
+					하단부는
+					$fragColor(k)=P(k)+W_{k}Q(k+hd)$
+					상단부는
+					$fragColor(k)=P(k-hd)+W_{k-hd}Q(k)$
+					![[FFT_image_1.png|600]] [출처](https://infograph.tistory.com/342)
+				- 위 사진처럼 row or col을 고정시켜놓고 보았을 때 1차원으로 했을 때 각 r 값으로 구역을 나누고 한 셀 크기를 hd라고 생각하면 된다.
 		
