--- a/cg/2024-10-17-fourier.md
+++ b/cg/2024-10-17-fourier.md
@@ -56,7 +56,7 @@ $$
     2. 모든 파동들은 주기 함수의 합(series)으로 나타낼 수 있고(분해) 역변환이 가능하다
     3. fourier transform을 통해 계수(amplitude)와 파장(frequency)을 구할 수 있다
      전파나 음성 신호 같은 t, time domain -> frequency domain을 뽑아낼 수 있고, image의 경우에는 공간 축으로 정의될 수도 있다(spatial domain -> frequency domain)
-     ![[Pasted image 20241016122712.png|400]]
+     ![[fourier_1.png|400]]
      이미지를 필터링 할 때에도 time domain 함수에서 특정 주파수를 다루는 것보다 frequency domain에서 frequency 값을 쓰면 되기 때문에 더 편하다.
 
 2.  Fourier Transform mathematical understanding
@@ -97,7 +97,7 @@ $$
 F(u,v) = |F(u,v)| e^{i\phi(u, v)}
 $$
  Fourier spectrum은 해당 frequency가 이미지에 얼마나 비중이 있는지를 나타낸다. 가운데 이미지를 중앙으로 shift 했을 때 F(0, 0)은 영상의 DC 성분, 입력 영상의 모든 픽셀 값과 같다. 이를 기준으로 나머지를 255 정규화 하면 가운데만 흰색 나머지는 거의 0과 가까운 고주파수 성분이 된다.(보통 log로 시각화) 일부 고주파수 성분을 버려도 역푸리에 변환을 했을 때 원본에 가깝게 복원이 가능하다. 이미지 신호에서 특징적인 부분을 추출할 수 있다는 뜻.
- ![[그림1.png|200]] ![[Pasted image 20241015223041.png|450]]
+ ![[FourierImage_1.png|200]] ![[FourierImage_2.png|450]]
     푸리에 변환은 sin cos 함수꼴이기 때문에 실수의 u, v에 대해 항상 상하좌우 대칭을 이루고 있다(u, v = 0, ±1, ±2 등, 자연수 아니어도 됨!). 해당 fourier spectrum이 주파수의 강도를 나타내는데 이걸 이미지 에서 어떻게 해석을 할 수 있을까? 특정 이미지(205 by 205)의 fourier spectrum image를 볼 때는 위의 사진과 비슷하게 나타난다. 해당 이미지에 x축으로 20 pixel, y축으로 10픽셀인 sin 함수를 강제로 추가한다면 푸리에 스펙트럼에는 F(10.25, 20.5)에 강한 저주파 점이 찍히게 된다. 이는 W/u = 205/10.25 = 20, H/v = 205/20.5 = 10 pixel의 주기 성분이 입력 이미지에 찍히게 된다(실제 u,v가 찍힐 때는 정수로 표현된다). 만약 옛날 TV에 노이즈가 낀 것 처럼 특정 함수가 추가되어 안보일 때 fourier spectrum의 특정 peak를 지우고 푸리에 역변환을 수행하면 해당 노이즈를 지울 수 있을 것 같다.
     
 
@@ -106,11 +106,11 @@ $$
     복소 평면에서 F(u)는 (R(u), l(u))에 각도는 $\phi(u)$이다.$$f(t) = \int_{-\infty}^{\infty}F(u)e^{i\omega t} du = \int_{-\infty}^{\infty}|F(u)|e^{i\phi(u)}e^{i\omega t} du = \int_{-\infty}^{\infty}|F(u)|e^{i(\phi(u) + \omega t)} du$$
      기초적인 파동방정식의 $2\pi f t= \omega t$ 항에 시작 점인 위상 $\phi (u)$가 들어간 형태임을 직관적으로 이해할 수 있다. 만약 가운데 저주파 신호들 긴 파장 대의 신호들이 모여있다면, 이미지에서 밝기의 변화가 시작되는 위치, 시작점, 윤곽을 위상만으로 알아낼 수 있다. magnitude와 phase 둘 중 더 많은 정보를 가지고 있는 것이 있는가?? 아니면 둘 중 하나를 필터링해서 유지시킨다면 어떤 것을 유지해야 하는가?? (참조 : Magnitude and Phase by Deepa Kundur)
 
-    ![[Pasted image 20241016010511.png|200]] ![[Pasted image 20241016010651.png|200]]![[Pasted image 20241016010710.png|200]]
+    ![[Pasted image 20241016010511.png|200]] ![[Frequency_1.png|200]]![[Phase_1.png|200]]
 
     우측 사진은 좌측 사진에 대해 각 magnitude spectrum, phase로 나타낸 값이다. 아래의 첫 번째 사진은 spectrum을 보존하고 phase = 0, 두 번째 사진은 phase를 보존하고 spectrum을 1에 normalized 하여 나타냈다. 세 번째 사진은 각 대상의 spectrum과 phase를 서로 바꾸어 적용.
 
-    ![[Pasted image 20241016011155.png|200]]![[Pasted image 20241016011220.png|200]]![[Pasted image 20241016011239.png|200]]
+    ![[Phase_2.png|200]]![[Phase_reverse.png|200]]![[frequency_phase_mix.png|200]]
 
     두 번째 사진이 잘 안보일 수 있지만 외곽선 추출이 잘 되었다. specturm의 경우 색깔, 밝기의 명암 부분을 드러내고 phase는 밝기가 바뀌는 부분, 구조나 형태를 잘 나타내는 것을 알 수 있다.
 
@@ -143,7 +143,7 @@ $$
 	P_l^{|m|}(\cos\theta)=(-1)^m{{(l+|m|)!}\over{(l-|m|)!}}P_l^{-|m|}(\cos\theta)
 	$$
 	각각 cartesian 좌표계와 spherical 좌표계로 표현 가능하고 l에 따른 식은 [위키피디아](https://en.wikipedia.org/wiki/Table_of_spherical_harmonics)에 자세한 내용을 볼 수 있다. 계수인 $K_{l}^{m}$과 $P_{l}^{|m|}$에 대해서는 constant값으로 구할 수 있다. K는 정규화에 대한 배율 계수, P는 르장드르 다항식이라고 한다. 실제 구현에서 구면 조화 함수는 table로 어느정도 구해져 있기 때문에 사용하기 쉽다. (x, y, z) 좌표계를 구면 좌표계에 수정하여 넣기만 하면 된다.
-	![[Pasted image 20241016153705.png|400]]
+	![[SH_1.png|400]]
 	visualization으로는 위와 같다. 화학에 오비탈 부분에서 본 것 같다. 3d 모델에서 여러 광원에서 들어오는 빛을 real-time으로 계산하고 표현할 수 있다고 한다. 위 식은 complex spherical harmonic이고 우리는 실수부인 real shperical harmonic의 basis $y_{l}^{m}(\theta, \phi)$를 볼 것이고 e의 지수항을 오일러로 분해해서 실수부만 추출하면 된다.
 	 projection은 기존 data를 RSH 공간으로 변환하여 계산하는데 사용된다. projection을 이용해 data에서 RSH의 계수를 추출하는데 필요하게 된다. projection(coefficients) $f_{l}^{m}$는 basis function y로부터 다음과 같이 구할 수 있다. 여기서는 [해당 위키](https://en.wikipedia.org/wiki/Spherical_harmonics)를 참조했다.
 	$$
@@ -196,7 +196,7 @@ $$
 	   L_{o}{(\mathbf{x}, \omega)} = \rho E(\mathbf{x})
 	   $$
 	   여기서 우리가 배운 구면 조화 함수를 적용시킬 수 있다. 구면 조화 함수의 실수 부분은 아래와 같이 표현 할 수 있다.
-	   ![[Pasted image 20241017011005.png|600]]
+	   ![[SH_2.png|600]]
 	   P 부분의 르장드르 polymonial도 복잡하게 표현되지만 l과 m의 범위 내에 constant 값을 가지고 있다. 이를 통해 $y_{0}^{0}(\mathbf{n})$부터 $y_{2}^{2}(\mathbf{n})$ 뿐 만아니라 더 많은 l과 m으로 부터 구면 조화 함수를 미리 setting 할 수 있다.
 	   이를 irradiance Map에 어떻게 적용할 수 있을까?? 우리는 지금까지 여러 basis를 통해 모르는 복잡한 함수 f(x)를 basis function의 series로 구할 수 있음을 알아 왔기 때문에 irradiance map 역시 SH basis의 series로 표현할 수 있다. 여기서 항상 basis에 amplitude가 곱해져 왔는데 이를 projection(투영)이라고 볼 수 있다. F(u)를 구했듯이 우리는 원본 함수의 전체 범위에 대해 basis function과 곱을 적분해서 나타낼 수 있다. 다시 푸리에 변환 쪽을 다시 쓰면,
 	   $$
@@ -223,7 +223,7 @@ $$
 	   \hat{A}_{l} = \sqrt{ \frac{4\pi}{2l+1} }A_{l}
 	   $$
 	   이라 하고 table로 미리 계산하여 constant로 사용한다고 한다. 이는 수치가 좀 빠르게 감소하는 모습을 볼 수 있다. 그렇기 때문에 l = 2까지 근사하여 계산해도 큰 오차가 없다.
-	   ![[Pasted image 20241017014806.png|200]]
+	   ![[SH_3.png|200]]
 	   
 	    마지막으로 특정 surface에 대한 irradiance E는 다음과 같이 나타낸다.
 	    $$
