--- a/cg/2024-09-06-백민호(rex).md
+++ b/cg/2024-09-06-백민호(rex).md
@@ -331,10 +331,10 @@
 	- 1st pass에서 depth test를 진행하여 pixel에 하나의 obj를 골라내기 때문에 lighting
 	  연산이 크게 줄어든다
 - vsFixed
-	- GEO, geometries[] = p_mesh->buffer.geometry
-	- geometries[id].mtx * vertex local pos => wpos, wpos * cam.view_matrix => epos
+	- GEO, geometries\[] = p_mesh->buffer.geometry
+	- geometries\[id].mtx * vertex local pos => wpos, wpos * cam.view_matrix => epos
 	- epos * cam.proj_matrix => gl_Position
-	- normal도 vertex normal에서 geometries[id].mtx 곱해주기
+	- normal도 vertex normal에서 geometries\[id].mtx 곱해주기
 - psGBuffer
 	- 해당 geometry의 material 정보 m, gub
 	- 알베도는 material color, normal은 cam.view_matrix 곱하기(일명 eye normal)
