update todo list

--- a/cg/할 것들.md
+++ b/cg/할 것들.md
@@ -1,25 +1,18 @@
-#### veiling glare
 
-1. perlin noise로 그래프로 boxcar approximation하는 것임!
-2. 방법은 이제부터 찾아야 함
-OX_grinder 참고 양파링 논문도
+reference
 
-#### gs with sh
+3D Gaussian Splatting for Real-Time Radiance Field Rendering
+GS3: Efficient Relighting with Triple Gaussian Splatting
+Deformable Radial Kernel Splatting
+Textured-GS: Gaussian Splatting with Spatially Defined Color and Opacity
+3D Gaussian Ray Tracing: Fast Tracing of Particle Scenes
+Ray Tracing Spherical Harmonics Glyphs
 
-1. primitive를 ga~ 말고 SH로 쓸 수 잇는가??
-2. BRDF 처럼 생긴 모양들을 SH로 표현하는거?
-3. Ray Tracing SH glyphs : SH를 RT에 쓰는 방법에 대해서 쓴 것 
-	1. 코드도 잇음, 빡숙은 말고 이해만 해보자
-4. root finding 파트 참고
-5. 잘 모르는 게 있으면 rendering은 재인님 DL은 동빈님 근데 내가 아는게 아직 업음,,,
-6. ![[sh_gs.png|200]]     ![[gs_gs.png|200]]    ![[raster_gs.png|200]]
-
-7. 목표는 12월 말, 1월 3주차까지 스플린트 해야됨
-8. 목표 학점은 찐으로 컴팩트하게 4.15목표로
+Accelerating k-Means on GPU with CUDA Programming
+Detailed Analysis and Optimization of CUDA K-means Algorithm
+FT K-Means: A High-Performance K-Means on GPU with Fault Tolerance
+Yinyang K-Means: A Drop-In Replacement of the Classic K-Means with Consistent Speedup
 
 
-#### vdb
-
-1. D:\grant\vdb 연구개발계획서_최종본 성대 부분만 읽어보기
-2. git에서 report 부분 읽으면서 지금까지 진행사항 확인
-3. kmeans 코드(cu, cpp) 이해
+Parametric Veiling-Glare Rendering
+Gaussian approximations of fluorescence microscope point-spread function models
