--- a/cg/할 것들.md
+++ b/cg/할 것들.md
@@ -1,18 +1,15 @@
 
-reference
+vg;are
 
-3D Gaussian Splatting for Real-Time Radiance Field Rendering
-GS3: Efficient Relighting with Triple Gaussian Splatting
-Deformable Radial Kernel Splatting
-Textured-GS: Gaussian Splatting with Spatially Defined Color and Opacity
-3D Gaussian Ray Tracing: Fast Tracing of Particle Scenes
-Ray Tracing Spherical Harmonics Glyphs
+SSBO에 쓴 다음 UBO/SSBO로 사용하기 직전에 barrier를 걸어서 막기 - 2
+이제 latex에 지금까지 한 내용을 글로 쓰면서 논문 준비를 시작 - 3
+원래 써두었던 부분과 sync가 안 맞는 부분을 수정 - 3
+추가한 내용들을 글에다가 써서 정리를 시작 - 3
 
-Accelerating k-Means on GPU with CUDA Programming
-Detailed Analysis and Optimization of CUDA K-means Algorithm
-FT K-Means: A High-Performance K-Means on GPU with Fault Tolerance
-Yinyang K-Means: A Drop-In Replacement of the Classic K-Means with Consistent Speedup
+vdb
+LSH 공부, vdb에 맞게 보완할 방법론들 찾기 일단 관련 논문이나 document 읽기 - 2
+ppt 적당히 수정하고 - 1
 
+대용량 pnt 시각화(이름모름)
+흠 - ?
 
-Parametric Veiling-Glare Rendering
-Gaussian approximations of fluorescence microscope point-spread function models
