--- a/cg/할 것들.md
+++ b/cg/할 것들.md
@@ -1,15 +1,5 @@
-
-vg;are
-
-SSBO에 쓴 다음 UBO/SSBO로 사용하기 직전에 barrier를 걸어서 막기 - 2
-이제 latex에 지금까지 한 내용을 글로 쓰면서 논문 준비를 시작 - 3
-원래 써두었던 부분과 sync가 안 맞는 부분을 수정 - 3
-추가한 내용들을 글에다가 써서 정리를 시작 - 3
-
-vdb
-LSH 공부, vdb에 맞게 보완할 방법론들 찾기 일단 관련 논문이나 document 읽기 - 2
-ppt 적당히 수정하고 - 1
-
-대용량 pnt 시각화(이름모름)
-흠 - ?
-
+single batch 그림 + LM 쓴 버전
+제목 후보군 10개 정도 만들어오기
+criterion, algorithm, method 
+effect는 너무 low 하다
+그리고 이건 기존 방법이 없다 사진도 바꿔 놓기 일단 대략적으로라도
