--- a/cg/vdb/2차년도.md
+++ b/cg/vdb/2차년도.md
@@ -11,3 +11,11 @@
 		- 벡터 데이터베이스 내의 벡터 간 거리 계산은 그래프(e.g., k-NN graph)의 최초 빌드, 가지치기(Pruning), 정렬(Sorting)을 포함한 다양한 단계에서 사용되기에, GPU를 통한 병렬 가속은 데이터베이스 전체 성능을 크게 향상할 수 있음.
 
 		- 본 연구는 다양한 query task에 대한 L2 Norm이나 Cosine Similarity와 같은 벡터 간 거리 계산을 가속하는 GPU 모듈을 제작함. 특히, 그래프 빌드에서 매 요청마다 필요한 데이터셋의 크기가 달라지는 가변적 batch size를 처리할 수 있게 하는 mini-batch 기반의 계산 모듈과 동시 요청되는 task들에 대한 데이터의 동적 GPU 로딩을 가속하는 memory load manager를 개발함. 또한, 이러한 task 별 query는 command queue를 이용하여 비동기적으로 수행되어, GPU의 stall을 최소화하도록 설계됨
+
+
+•다양한 query task의 거리 계산(L2 Norm, Cosine Similarity)을 위한 GPU module 개발
+•가변 batch size에 유연하게 대응하는 mini-batch 기반 계산 모듈
+•실시간 task 요청에 대응하는 memory load manager 설계
+	•Mini-batch 기반 계산 모듈과 task에 대한 데이터의 동적 GPU loading을 가속하는 memory loader 개발
+•동시 요청되는 task 마다 GPU data loading을 비동기 처리로 병렬화
+•Command Queue 기반 실행으로 GPU stall 최소화
