--- a/cg/tutorial/2020312914_Minho_Baek_a3.md
+++ b/cg/tutorial/2020312914_Minho_Baek_a3.md
@@ -26,16 +26,21 @@
 
 &ensp;Similar to the implementation of `create_circles`, I constructed the Cornell Box using a function named `create_walls`, which returns a vector of individual wall objects. Each wall is defined with precise transformation data. For example, the back wall is defined as:
 ```
-// back
-p = { vec3(275, 275, 550), 275, 275, vec4(0.725f, 0.710f, 0.680f, 1) };
-p.model_matrix = mat4::translate(p.center) *
-	mat4::scale(vec3(p.width, p.height, 1));
-planes.emplace_back(p);
+	p = {
+		{
+			{vec3(549.6f, 0.0f, 559.2f), vec3(0,0,-1), vec2(1,0)},
+			{vec3(0.0f, 0.0f, 559.2f), vec3(0,0,-1), vec2(0,0)},
+			{vec3(0.0f, 548.8f, 559.2f), vec3(0,0,-1), vec2(0,1)},
+			{vec3(556.0f,548.8f, 559.2f), vec3(0,0,-1), vec2(1,1)}
+		},
+		vec4(0.725f, 0.710f, 0.680f, 1)
+	};
+	planes.emplace_back(p); // back
 ```
 
-&ensp; In total, six walls were created, and each wall is rendered using two triangles, resulting in exactly 12 triangles as specified. The vertex indexing for the triangles follows the standard quad-to-triangle conversion: `std::vector<uint> indices = { 0, 1, 2, 0, 2, 3 };` - a method consistent with the earlier sphere implementation.
+&ensp; In total, six walls were created, and each wall is rendered using two triangles, resulting in exactly 12 triangles as specified. The vertex indexing for the triangles follows the standard quad-to-triangle conversion: `std::vector<uint> indices = { 0, 1, 2, 0, 2, 3 };` - a method consistent with the earlier sphere implementation. One notable difference is that all six walls were combined into a single VAO, and the rendering process maintained wall order by using the index divided by 6. Additionally, to ensure the interior of the box is visible, `GL_BACK` culling was applied, and the normal of the front wall was reversed.
 
-&ensp; While the official Cornell Box data specifies exact floating-point coordinates (e.g., 549.6, 556.0), I chose to round these to more visually coherent integer values such as 275 and 550. This simplification ensures that the rendered geometry appears clean and aligned, as seen in the accompanying images. The figure below shows a comparison of margin errors on the wall before and after rounding.
+&ensp; While the official Cornell Box data specifies precise floating-point coordinates such as 549.6 and 556.0, I rounded them to simpler integer values like 275 and 550 to simplify collision handling. This choice reduces computational complexity and makes collision detection more robust.
 
 &ensp;Wall colors were also carefully assigned in accordance with the specification (e.g., red for the left wall, green for the right wall, and light gray for the other surfaces), ensuring both visual accuracy and compliance with the assignment requirements.
 
