--- a/cg/vdb/2차년도.md
+++ b/cg/vdb/2차년도.md
@@ -1,4 +1,4 @@
-- 대규모 데이터셋의 GPU 파티셔닝을 위한 GPU 로딩의 지연 숨김 기법 개발
+`- 대규모 데이터셋의 GPU 파티셔닝을 위한 GPU 로딩의 지연 숨김 기법 개발
 	- GPU Cache Manager를 이용하여 병렬적인 동적 데이터 로딩 구현
 		- LRU 기반으로 On-demand page 동적 로딩을 위한 GPU Cache 매니저 구현
 		- Page마다 하나의 CUDA thread group을 할당하여 병렬적 페이지 처리 구현
